Bug 58170 - Help button in menu 'Tools - Options - Load/Save - General' does not reach context related LOCALHELP
Summary: Help button in menu 'Tools - Options - Load/Save - General' does not reach co...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.4.5 release
Hardware: Other Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.3.0
Keywords: regression
Depends on:
Blocks: UnspecificHelp
  Show dependency treegraph
 
Reported: 2012-12-12 05:59 UTC by Rainer Bielefeld Retired
Modified: 2014-05-19 15:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-12-12 05:59:11 UTC
Steps to reproducewith parallel installation of  "LOdev  4.0.0.0.beta1   -  GERMAN UI / German Locale  [Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)]"  {tinderbox: @6, pull time 2012-12-06} on German WIN7 Home Premium (64bit) with separate /4 User Profile for Master Branch:
1. Launch LibO
2. From Stat Center menu  'Tools -> Options - Load/Save ->
   General' 
3. <Help>

Current behavior: Help for 'Tools - Options' appears

Expected behavior: Help for 'Load/Save - General' appears

              
Operating System: Windows 7
Comment 1 Rainer Bielefeld Retired 2012-12-12 06:01:46 UTC
I already see that broken with 3.4.5 WIKIHELP.

Worked fine with 3.3.3 WIKIHELP, so seems to be a regression
Comment 2 Paul Weiss 2013-01-13 19:42:01 UTC
Problem still present in 3.6.4.3 on Windows 7.
Comment 3 Commit Notification 2014-05-19 15:36:31 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/help/commit/?id=fdfcaa991224f6ac15fdc778e0a301b9285208eb

Related: fdo#58170 save some orphaned help pages



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-05-19 15:38:02 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=98019536daeac4c136ce9b327545a27da6dbb2e0

Resolves: fdo#58170 use selected tab page helpid as final fallback



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.