Resolves: fdo#58170 use selected tab page helpid as final fallback

Change-Id: I73a064a40476f685dbf19097115bd48c5cc0f578